Update code for better page handling and server configuration
This commit includes changes mainly regarding improved page handling and some server configuration updates. It modifies the way pages are handled, especially for bot services and also brings changes in various server configurations and associated URLs for more efficient operations. The commit also introduces corresponding docker configuration files for certain services.

--- a/telegram-bot/src/main/resources/application-docker.yml
+++ b/telegram-bot/src/main/resources/application-docker.yml
@@ -2,23 +2,19 @@ server:
   port: 8083
   shutdown: graceful
 
-logging.level:
-  org.springframework.orm.jpa.JpaTransactionManager: DEBUG
-
 spring:
   main:
     banner-mode: off
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://localhost:5433/bali-events
+    url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: validate
-    show-sql: false
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: 'true'
