--- a/data-scrapper/src/main/resources/application-docker.yml
+++ b/data-scrapper/src/main/resources/application-docker.yml
@@ -1,9 +1,6 @@
 server:
-  port: 8083
+  port: 8082
   shutdown: graceful
-
-logging.level:
-  org.springframework.orm.jpa.JpaTransactionManager: DEBUG
 
 spring:
   main:
@@ -11,17 +8,19 @@ spring:
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://localhost:5433/bali-events
+    url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: validate
-    show-sql: false
     properties:
       hibernate:
         format_sql: 'true'
+
+webdriver:
+  local: false
 
 logging:
   level:
@@ -29,8 +28,3 @@ logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
-com:
-  balievent:
-    bot:
-      token:
-      username:
