--- a/data-scrapper/src/main/resources/application.yml
+++ b/data-scrapper/src/main/resources/application.yml
@@ -1,26 +1,20 @@
 server:
-  # start the program -> http://localhost:8082/swagger-ui/index.html
   port: 8082
   shutdown: graceful
 
 spring:
-  flyway:
-    baseline-on-migrate: true
-    baseline-version: 0
-    enabled: true
   main:
     banner-mode: off
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://localhost:5433/postgres
-    #    url: jdbc:postgresql://db:5432/postgres
+    url: jdbc:postgresql://localhost:5433/bali-events
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
