--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,17 +35,6 @@ services:
       - db
     restart: unless-stopped
 
-  #  selenium-chrome:
-  #    image: selenium/standalone-chrome
-  #    hostname: chrome
-  #    privileged: true
-  #    shm_size: 2gb
-  #    container_name: selenium-chrome
-  #    ports:
-  #      - "4444:4444"
-  #    networks:
-  #      - postgres
-
   firefox:
     image: selenium/standalone-firefox
     hostname: firefox
@@ -58,15 +47,17 @@ services:
     networks:
       - postgres
 
-#  data-scrapper:
-#    image: simakoff/data-scrapper:latest
-#    container_name: data-scrapper
-#    ports:
-#      - "8082:8082"
-#    depends_on:
-#      - selenium-chrome
-#    networks:
-#      - postgres
+  data-scrapper:
+    image: simakoff/data-scrapper:latest
+    container_name: data-scrapper
+    environment:
+      - "SPRING_PROFILES_ACTIVE=docker"
+    ports:
+      - "8082:8082"
+    depends_on:
+      - firefox
+    networks:
+      - postgres
 
 #  telegram-bot:
 #    image: simakoff/telegram-bot:latest
