--- a/data-scrapper/src/main/resources/application-docker.yml
+++ b/data-scrapper/src/main/resources/application-docker.yml
@@ -8,20 +8,19 @@ spring:
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://localhost:5433/bali-events
+    url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: update
-    show-sql: false
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: 'true'
 
 webdriver:
-  local: true
+  local: false
 
 logging:
   level:
