--- a/telegram-bot/src/main/resources/application-docker.yml
+++ b/telegram-bot/src/main/resources/application-docker.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8083
   shutdown: graceful
 
 spring:
@@ -8,20 +8,16 @@ spring:
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://localhost:5433/bali-events
+    url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: update
-    show-sql: false
     properties:
       hibernate:
         format_sql: 'true'
-
-webdriver:
-  local: true
 
 logging:
   level:
@@ -29,3 +25,8 @@ logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
+com:
+  balievent:
+    bot:
+      token:
+      username:
