--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -1,5 +1,4 @@
 server:
-  # start the program -> http://localhost:8080/swagger-ui/index.html
   port: 8083
   shutdown: graceful
 
@@ -13,13 +12,12 @@ spring:
     name: bali-events
   datasource:
     url: jdbc:postgresql://localhost:5433/bali-events
-    # url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
@@ -34,7 +32,5 @@ logging:
 com:
   balievent:
     bot:
-      # token: 6862871633:AAFQEI2mT7sjjiUjfSbgHHYZe7M9xPbjwlg
       token: 6781420399:AAHi0vGFUPnh-7wBzC7si7hw1XRQmrNmPzA
-      # username: test_remove_me_sima_bot
       username: BaliEventsCoordinatebot
