--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -41,5 +41,5 @@ logging:
 com:
   balievent:
     bot:
-      token:
-      username:
+      token: 6862871633:AAFQEI2mT7sjjiUjfSbgHHYZe7M9xPbjwlg
+      username: test_remove_me_sima_bot
