--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,6 +64,8 @@ services:
     container_name: telegram-bot
     environment:
       - "SPRING_PROFILES_ACTIVE=docker"
+      - "TELEGRAM_TOKEN=${TELEGRAM_TOKEN}"
+      - "TELEGRAM_NAME=${TELEGRAM_NAME}"
     ports:
       - "8083:8083"
     networks:
