--- a/data-scrapper/src/main/resources/application-docker.yml
+++ b/data-scrapper/src/main/resources/application-docker.yml
@@ -4,8 +4,13 @@ spring:
     username: ${TELEGRAM_BOT_PG_NAME}
     password: ${TELEGRAM_BOT_PG_PASSWORD}
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: validate
-
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: 'true'
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 webdriver:
   local: false
