--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,4 @@
 version: '3.8'
-# docker-compose bali-events-bot up -d
 
 services:
   telegram-bot-postgres:
@@ -34,29 +33,31 @@ services:
       - telegram-bot-postgres
     restart: unless-stopped
 
-  #  telegram-bot-firefox:
-  #    image: selenium/standalone-firefox
-  #    hostname: firefox
-  #    privileged: true
-  #    shm_size: 2gb
-  #    container_name: selenium-firefox
-  #    ports:
-  #      - "4445:4444"
-  #      - "7900:7900"
-  #    networks:
-  #      - postgres
-  #
-  #  telegram-bot-data-scrapper:
-  #    image: simakoff/data-scrapper:latest
-  #    container_name: data-scrapper
-  #    environment:
-  #      - "SPRING_PROFILES_ACTIVE=docker"
-  #    ports:
-  #      - "8082:8082"
-  #    depends_on:
-  #      - firefox
-  #    networks:
-  #      - postgres
+  telegram-bot-firefox:
+    image: selenium/standalone-firefox
+    hostname: firefox
+    privileged: true
+    shm_size: 2gb
+    container_name: selenium-firefox
+    ports:
+      - "4445:4444"
+      - "7900:7900"
+    networks:
+      - postgres
+
+  telegram-bot-data-scrapper:
+    image: simakoff/data-scrapper:latest
+    container_name: data-scrapper
+    environment:
+      - "SPRING_PROFILES_ACTIVE=docker"
+      - "TELEGRAM_BOT_PG_NAME=postgres"
+      - "TELEGRAM_BOT_PG_PASSWORD=postgres"
+    ports:
+      - "8082:8082"
+    depends_on:
+      - telegram-bot-firefox
+    networks:
+      - postgres
 
   telegram-bot-app:
     image: simakoff/telegram-bot:latest
