--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <telegrambots.version>6.9.7.1</telegrambots.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <selenium-java.version>4.38.0</selenium-java.version>
+        <jsoup.version>1.21.2</jsoup.version>
     </properties>
 
     <dependencies>
@@ -96,16 +97,10 @@
             <version>${telegrambots.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${jaxb-api.version}</version>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${selenium-java.version}</version>
-        </dependency>
-
     </dependencies>
 
     <build>
