--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,12 +38,20 @@ webdriver:
 
 logging:
   level:
+    org.springframework.cloud.openfeign.clientconfig: DEBUG
     org.zalando.logbook: TRACE
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
 com:
   balievent:
+    client:
+      thebeatbali:
+        base_url: "https://thebeatbali.com"
+    calendar:
+      range:
+        start: 2025-11-01
+        end: 2025-11-30
     bot:
       token: 6711002396:AAGKVf9gFAMbiJuW0vtjuu4FSbJr_F9r1hM
       username: test_me_bali_sima_bot
